--- a/main.html
+++ b/main.html
@@ -10,6 +10,10 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<div>
+		<p>My current favourite song is </p>
+		<a href=https://www.youtube.com/watch?v=n2pnvxi3Ia8></a>
+	</div>
 
 </body>
 
